Light theme test

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <canvas></canvas>
       <div id="field">
-        <div id="projectile"></div>
+        <div id="projectile" class="icon"></div>
         <div id="launcher" class="icon"></div>
         <div id="ufo" class="icon"></div>
       </div>
@@ -128,7 +128,6 @@
     </div>
     <div id="confettiContainer"></div>
     <div id="finishBlock" class="popup">
-
       <div class="coverBox">
         <div class="light"></div>
         <div class="cover"></div>
