--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="manifest" href="manifest.json">
   </head>
   <body>
-    <main>
+    <main data-blur>
       <div id="electro">
         <div class="electro"></div>
       </div>
@@ -30,7 +30,7 @@
         <div id="ufo" class="icon"></div>
       </div>
     </main>
-    <div id="startBlock" class="popup">
+    <div id="startBlock" class="popup" data-blur>
       <div class="coverBox">
         <div class="light"></div>
         <div class="cover"></div>
@@ -44,7 +44,7 @@
         Расчитай начальные условия H, V<sub>0</sub> и угол α между направлением V<sub>0</sub> и осью Ох для запуска электрического заряда,
         чтобы он попал в тарелку, при воздействии на него различных полей. Запусти снаряд и проверь свои расчеты.
       </p>
-      <button id="start" data-text data-ru="Начать" data-ua="Почати">Начать</button>
+      <button id="start" data-text data-ru="Начать" data-ua="Почати" data-interactive>Начать</button>
       <h3 id="rotate" class="warning" data-text data-ru="Поверни устройство горизонтально!" data-ua="Поверни пристрій горизонтально!">Поверни устройство горизонтально!</h3>
     </div>
     <h3 id="smallDevice" class="warning" data-text
@@ -52,7 +52,7 @@
       data-ua="Скористуйтеся пристроєм із єкраном більшого розміру!">
       Воспользуйтесь устройством с экраном большего размера!
     </h3>
-    <div id="controlsBlock" class="popup">
+    <div id="controlsBlock" class="popup" data-blur>
       <div class="columnContent projectileConditions">
         <h2>Снаряд:</h2>
         <label>q = <span class="digit" id="q"></span> Кл</label>
@@ -83,20 +83,20 @@
       </div>
       <div class="columnContent controls">
         <label for="velocity">V<sub>0</sub> =</label>
-        <input type="text" name="velocity" placeholder="55" pattern="\d*">
+        <input type="text" name="velocity" placeholder="55" pattern="\d*" data-interactive>
         <label>м/с</label>
         <br>
         <label for="height">H =</label>
-        <input type="text" name="height" placeholder="15" pattern="\d*">
+        <input type="text" name="height" placeholder="15" pattern="\d*" data-interactive>
         <label>м</label>
         <br>
         <label for="angle">α =</label>
-        <input type="text" name="angle" placeholder="45" pattern="\d*">
+        <input type="text" name="angle" placeholder="45" pattern="\d*" data-interactive>
         <label>°</label>
       </div>
-      <button id="fire" data-text data-ru="Запустить снаряд" data-ua="Запустити снаряд">Запустить снаряд</button>
+      <button id="fire" data-text data-ru="Запустить снаряд" data-ua="Запустити снаряд" data-interactive>Запустить снаряд</button>
     </div>
-    <div id="description" class="popup">
+    <div id="description" class="popup" data-blur>
       <p id="NField" class="descriptionText" data-text
         data-ru="Никакие поля не оказывают воздействие на снаряд"
         data-ua="Жодне з полів не впливає на снаряд">
@@ -126,6 +126,15 @@
       <h2 data-text data-ru="Решено не верно!" data-ua="Розв'язано не вірно!">Решено не верно!</h2>
       <button id="fail" data-text data-ru="Заново" data-ua="Заново">Заново</button>
     </div>
+    <footer data-blur>
+      Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware" target="_blank" rel="noreferrer" data-interactive>Good Ware</a>,
+      <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp" target="_blank" rel="noreferrer" data-interactive>Eucalyp</a>,
+      <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons" target="_blank" rel="noreferrer" data-interactive>Smashicons</a> and
+      <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank" rel="noreferrer" data-interactive>Freepik</a>
+      from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noreferrer" data-interactive> www.flaticon.com</a> <span class="space">—</span>
+      Choose language: <span class="space lang ru" tabindex="0" role="button" data-interactive>RU</span><span class="space lang ua" tabindex="0" role="button" data-interactive>UA</span>
+    </footer>
+    <div id="ghostBackground"></div>
     <div id="confettiContainer"></div>
     <div id="finishBlock" class="popup">
       <div class="coverBox">
@@ -139,13 +148,5 @@
       <h2 data-text data-ru="Появилась новая версия!" data-ua="З'явилася нова версія!">Появилась новая версия!</h2>
       <button class="reload" data-text data-ru="Обновить" data-ua="Оновити">Обновить</button>
     </div>
-    <footer>
-      Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware" target="_blank" rel="noreferrer">Good Ware</a>,
-      <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp" target="_blank" rel="noreferrer">Eucalyp</a>,
-      <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons" target="_blank" rel="noreferrer">Smashicons</a> and
-      <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank" rel="noreferrer">Freepik</a>
-      from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noreferrer"> www.flaticon.com</a> <span class="space">—</span>
-      Choose language: <span class="space lang ru" tabindex="0" role="button">RU</span><span class="space lang ua" tabindex="0" role="button">UA</span>
-    </footer>
   </body>
 </html>
