Rewrite english translation

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="theme-color" content="#1d2130">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Попади в тарелку! Расчитай начальные условия H, V0 и угол α между направлением V0 и осью Ох для запуска электрического заряда,
+    <meta name="description" content="Попади в тарелку! Рассчитай начальные условия H, V0 и угол α между направлением V0 и осью Ох для запуска электрического заряда,
     чтобы он попал в тарелку, при воздействии на него различных полей. Запусти снаряд и проверь свои расчеты.">
     <link rel="icon" href="icon192x192.svg">
     <link rel="apple-touch-icon" href="icon512x512.svg">
@@ -37,14 +37,12 @@
       </div>
       <h1 data-text data-ru="Попади в тарелку!" data-uk="Влуч у тарілку!" data-en="Hit the UFO!">Попади в тарелку!</h1>
       <p class="startText" data-text
-         data-ru="Расчитай начальные условия H, V<sub>0</sub> и угол α между направлением V<sub>0</sub> и осью Ох для запуска электрического заряда,
+         data-ru="Рассчитай начальные условия H, V<sub>0</sub> и угол α между направлением V<sub>0</sub> и осью Оx для запуска электрического заряда,
                   чтобы он попал в тарелку, при воздействии на него различных полей. Запусти снаряд и проверь свои расчеты."
-         data-uk="Розрахуй початкові умови H, V<sub>0</sub> та кут α між напрямком V<sub>0</sub> та віссю Ох для запуска електричного заряду,
+         data-uk="Розрахуй початкові умови H, V<sub>0</sub> та кут α між напрямком V<sub>0</sub> та віссю Оx для запуска електричного заряду,
                   щоб він влучив у тарілку, при впливі на нього різноманітних полів. Запусти снаряд та перевір свої розрахунки."
-         data-en="Calculate the initial conditions H, V<sub>0</sub> and angle α between the direction V<sub>0</sub> and the axis Ox to launch the
-                  electric charge so that it hits the UFO with the affect of various fields on it. Launch the projectile and check your calculations.">
-        <!--Найди уравнения зависимости координат снаряда от времени и определи из них начальные условия запуска снаряда Н,
-        V<sub>0</sub> и угол α между направлением V<sub>0</sub> и осью Ох. Запусти снаряд и проверь свои расчеты.-->
+         data-en="Calculate initial conditions H, V<sub>0</sub> and angle α between the direction V<sub>0</sub> and the Ox axis for launch an electric charge,
+                  to hit the UFO by exposing him to different fields. Launch the projectile and check your calculations.">
         Расчитай начальные условия H, V<sub>0</sub> и угол α между направлением V<sub>0</sub> и осью Ох для запуска электрического заряда,
         чтобы он попал в тарелку, при воздействии на него различных полей. Запусти снаряд и проверь свои расчеты.
       </p>
@@ -101,7 +99,7 @@
         <input type="text" name="angle" placeholder="45" pattern="\d*" data-interactive>
         <label>°</label>
       </div>
-      <button id="fire" data-text data-ru="Запустить снаряд" data-uk="Запустити снаряд" data-en="Launch projectile" data-interactive>Запустить снаряд</button>
+      <button id="fire" data-text data-ru="Запустить снаряд" data-uk="Запустити снаряд" data-en="Launch the charge" data-interactive>Запустить снаряд</button>
     </div>
     <div id="description" class="popup" data-blur>
       <p id="NField" class="descriptionText" data-text
