Add some info, delete unused things
- remove unused manifest and service worker files
- remove update notification mechanic
- update english translation for some buttons and texts
- enlarge footer with info how lang and theme initially selected
- add credits to time and place of creation and link on source code

--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<html lang="ru" dir="ltr" data-theme="dark">
+<html lang="en" dir="ltr" data-theme="dark">
   <head>
     <title>physicGame</title>
     <meta charset="utf-8">
     <meta name="theme-color" content="#1d2130">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Попади в тарелку! Рассчитай начальные условия H, V0 и угол α между направлением V0 и осью Ох для запуска электрического заряда,
-    чтобы он попал в тарелку, при воздействии на него различных полей. Запусти снаряд и проверь свои расчеты.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Calculate initial conditions H, V<sub>0</sub> and angle α between the direction V<sub>0</sub> and the Ox axis for launch an electric charge,
+     to hit the UFO by exposing him to different fields. Launch the projectile to check your calculations.">
     <link rel="icon" href="icon192x192.svg">
     <link rel="apple-touch-icon" href="icon512x512.svg">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:600,700,800&display=swap&subset=cyrillic">
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
-    <link rel="stylesheet" id="font">
-    <link rel="manifest" href="manifest.json">
   </head>
   <body>
     <main data-blur>
@@ -42,108 +40,120 @@
          data-uk="Розрахуй початкові умови H, V<sub>0</sub> та кут α між напрямком V<sub>0</sub> та віссю Оx для запуска електричного заряду,
                   щоб він влучив у тарілку, при впливі на нього різноманітних полів. Запусти снаряд та перевір свої розрахунки."
          data-en="Calculate initial conditions H, V<sub>0</sub> and angle α between the direction V<sub>0</sub> and the Ox axis for launch an electric charge,
-                  to hit the UFO by exposing him to different fields. Launch the projectile and check your calculations.">
-        Расчитай начальные условия H, V<sub>0</sub> и угол α между направлением V<sub>0</sub> и осью Ох для запуска электрического заряда,
-        чтобы он попал в тарелку, при воздействии на него различных полей. Запусти снаряд и проверь свои расчеты.
+                  to hit the UFO by exposing him to different fields. Launch the projectile to check your calculations.">
+        Calculate initial conditions H, V<sub>0</sub> and angle α between the direction V<sub>0</sub> and the Ox axis for launch an electric charge,
+        to hit the UFO by exposing him to different fields. Launch the projectile to check your calculations.
       </p>
-      <button id="start" data-text data-ru="Начать" data-uk="Почати" data-en="Start" data-interactive>Начать</button>
+      <button id="start" data-text data-ru="Начать" data-uk="Почати" data-en="Start" data-interactive>Start</button>
       <h3 id="rotate" class="warning" data-text data-ru="Поверни устройство горизонтально!" data-uk="Поверни пристрій горизонтально!" data-en="Rotate your device horizontally!">
-        Поверни устройство горизонтально!
+        Rotate your device horizontally!
       </h3>
     </div>
     <h3 id="smallDevice" class="warning" data-text
       data-ru="Воспользуйтесь устройством с экраном большего размера!"
       data-uk="Скористуйтеся пристроєм із єкраном більшого розміру!"
       data-en="Use device with bigger screen!">
-      Воспользуйтесь устройством с экраном большего размера!
+      Use device with bigger screen!
     </h3>
     <div id="controlsBlock" class="popup" data-blur>
       <div class="columnContent projectileConditions">
-        <h2 data-text data-ru="Снаряд:" data-uk="Снаряд:" data-en="Projectile:">Снаряд:</h2>
-        <label>q = <span class="digit" id="q"></span> <span data-text data-ru="Кл" data-uk="Кл" data-en="C">Кл</span></label>
+        <h2 data-text data-ru="Снаряд:" data-uk="Снаряд:" data-en="Projectile:">Projectile:</h2>
+        <label>q = <span class="digit" id="q"></span> <span data-text data-ru="Кл" data-uk="Кл" data-en="C">C</span></label>
         <br>
-        <label>m = <span class="digit" id="m"></span> <span data-text data-ru="кг" data-uk="кг" data-en="kg">кг</span></label>
+        <label>m = <span class="digit" id="m"></span> <span data-text data-ru="кг" data-uk="кг" data-en="kg">kg</span></label>
       </div>
       <div class="columnContent maxValues">
-        <h2 data-text data-ru="Ограничения:" data-uk="Обмеження:" data-en="Limits:">Ограничения:</h2>
-        <label>V<sub>0</sub> = <span class="digit">60</span> <span data-text data-ru="м/С" data-uk="м/с" data-en="m/s">м/с</span></label>
+        <h2 data-text data-ru="Ограничения:" data-uk="Обмеження:" data-en="Limits:">Limits:</h2>
+        <label>max V<sub>0</sub> = <span class="digit">60</span> <span data-text data-ru="м/С" data-uk="м/с" data-en="m/s">m/s</span></label>
         <br>
-        <label>H = <span class="digit">60</span> <span data-text data-ru="м" data-uk="м" data-en="m">м</span></label>
+        <label>max H = <span class="digit">60</span> <span data-text data-ru="м" data-uk="м" data-en="m">m</span></label>
         <br>
-        <label>α = <span class="digit">90</span> °</label>
+        <label>max α = <span class="digit">90</span> °</label>
       </div>
       <div class="columnContent fieldConditions">
-        <h2 data-text data-ru="Поля:" data-uk="Поля:" data-en="Fields:">Поля:</h2>
-        <label>E = <span class="digit" id="E"></span> <span data-text data-ru="В/м" data-uk="В/м" data-en="V/m">В/м</span></label>
+        <h2 data-text data-ru="Поля:" data-uk="Поля:" data-en="Fields:">Fields:</h2>
+        <label>E = <span class="digit" id="E"></span> <span data-text data-ru="В/м" data-uk="В/м" data-en="V/m">V/m</span></label>
         <br>
-        <label>B = <span class="digit" id="B"></span> <span data-text data-ru="Тесла" data-uk="Тесла" data-en="Tesla">Тесла</span></label>
+        <label>B = <span class="digit" id="B"></span> <span data-text data-ru="Тесла" data-uk="Тесла" data-en="Tesla">Tesla</span></label>
       </div>
       <div class="columnContent ufoConditions">
-        <h2 data-text data-ru="Тарелка:" data-uk="Тарілка:" data-en="UFO:">Тарелка:</h2>
-        <label>x = <span class="digit" id="ufoX"></span> <span data-text data-ru="м" data-uk="м" data-en="m">м</span></label>
+        <h2 data-text data-ru="Тарелка:" data-uk="Тарілка:" data-en="UFO:">UFO:</h2>
+        <label>x = <span class="digit" id="ufoX"></span> <span data-text data-ru="м" data-uk="м" data-en="m">m</span></label>
         <br>
-        <label>y = <span class="digit" id="ufoY"></span> <span data-text data-ru="м" data-uk="м" data-en="m">м</span></label>
+        <label>y = <span class="digit" id="ufoY"></span> <span data-text data-ru="м" data-uk="м" data-en="m">m</span></label>
         <br>
-        <label>R = <span class="digit">3.5</span> - <span class="digit">4.5</span> <span data-text data-ru="м" data-uk="м" data-en="m">м</span></label>
+        <label>R = <span class="digit">3.5</span> - <span class="digit">4.5</span> <span data-text data-ru="м" data-uk="м" data-en="m">m</span></label>
       </div>
       <div class="columnContent controls">
         <label for="velocity">V<sub>0</sub> =</label>
         <input type="text" name="velocity" placeholder="55" pattern="\d*" data-interactive>
-        <label><span data-text data-ru="м/С" data-uk="м/с" data-en="m/s">м/с</span></label>
+        <label><span data-text data-ru="м/С" data-uk="м/с" data-en="m/s">m/s</span></label>
         <br>
         <label for="height">H =</label>
         <input type="text" name="height" placeholder="15" pattern="\d*" data-interactive>
-        <label><span data-text data-ru="м" data-uk="м" data-en="m">м</span></label>
+        <label><span data-text data-ru="м" data-uk="м" data-en="m">m</span></label>
         <br>
         <label for="angle">α =</label>
         <input type="text" name="angle" placeholder="45" pattern="\d*" data-interactive>
         <label>°</label>
       </div>
-      <button id="fire" data-text data-ru="Запустить снаряд" data-uk="Запустити снаряд" data-en="Launch the charge" data-interactive>Запустить снаряд</button>
+      <button id="fire" data-text data-ru="Запустить снаряд" data-uk="Запустити снаряд" data-en="Launch the charge" data-interactive>Launch the charge</button>
     </div>
     <div id="description" class="popup" data-blur>
       <p id="NField" class="descriptionText" data-text
         data-ru="Никакие поля не оказывают воздействие на снаряд"
         data-uk="Жодне з полів не впливає на снаряд"
         data-en="No fields affect the projectile">
-        Никакие поля не оказывают воздействие на снаряд
+        No fields affect the projectile
       </p>
       <p id="EField" class="descriptionText" data-text
         data-ru="Однородное электростатическое поле, силовые линии которого направлены вниз"
         data-uk="Однорідне електростатичне поле, силові лінії якого напрямлені вниз"
-        data-en="Homogeneous electrostatic field, the lines of force of which are directed down">
-        Однородное электростатическое поле, силовые линии которого направлены вниз
+        data-en="Homogeneous electrostatic field, lines of force of which are directed down">
+        Homogeneous electrostatic field, lines of force of which are directed down
       </p>
       <p id="MField" class="descriptionText" data-text
         data-ru="Однородное магнитостатическое поле, линии индукции которого направлены от наблюдателя"
         data-uk="Однорідне магнітостатичне поле, лінії індукції якого напрямлені від спостерігача"
-        data-en="Homogeneous magnetostatic field whose induction lines are directed from the observer">
-        Однородное магнитостатическое поле, линии индукции которого направлены от наблюдателя
+        data-en="Homogeneous magnetostatic field, induction lines of which are directed from the observer">
+        Homogeneous magnetostatic field, induction lines of which are directed from the observer
       </p>
       <p id="EMField" class="descriptionText" data-text
         data-ru="Взаимноперпендикулярные электростатическое и магнитостатическое поля"
         data-uk="Взаємноперпендикулярні електростатичне та магнітостатичне поля"
         data-en="Mutually perpendicular electrostatic and magnetostatic fields">
-        Взаимноперпендикулярные электростатическое и магнитостатическое поля
+        Mutually perpendicular electrostatic and magnetostatic fields
       </p>
     </div>
     <div id="winBlock" class="popup">
-      <h2 data-text data-ru="Задача решена!" data-uk="Задача вирішена!" data-en="Solved correctly!">Задача решена!</h2>
-      <button id="win" data-text data-ru="Продолжить" data-uk="Продовжити" data-en="Continue">Продолжить</button>
+      <h2 data-text data-ru="Задача решена!" data-uk="Задача вирішена!" data-en="Solved correctly!">Solved correctly!</h2>
+      <button id="win" data-text data-ru="Продолжить" data-uk="Продовжити" data-en="Proceed">Proceed</button>
     </div>
     <div id="failBlock" class="popup">
-      <h2 data-text data-ru="Решено не верно!" data-uk="Розв'язано не вірно!" data-en="Solved wrong!">Решено не верно!</h2>
-      <button id="fail" data-text data-ru="Заново" data-uk="Заново" data-en="Repeat">Заново</button>
+      <h2 data-text data-ru="Решено не верно!" data-uk="Розв'язано не вірно!" data-en="Solved wrong!">Solved wrong!</h2>
+      <button id="fail" data-text data-ru="Заново" data-uk="Заново" data-en="Try again">Try again</button>
     </div>
     <footer data-blur>
-      Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware" target="_blank" rel="noreferrer" data-interactive>Good Ware</a>,
-      <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp" target="_blank" rel="noreferrer" data-interactive>Eucalyp</a>,
-      <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons" target="_blank" rel="noreferrer" data-interactive>Smashicons</a> and
-      <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank" rel="noreferrer" data-interactive>Freepik</a>
-      from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noreferrer" data-interactive> www.flaticon.com</a> <span class="space">—</span>
-      Choose language: <span class="space lang ru" tabindex="0" role="button" data-interactive>RU</span>
-                       <span class="space lang uk" tabindex="0" role="button" data-interactive>UA</span>
-                       <span class="space lang en" tabindex="0" role="button" data-interactive>EN</span>
+      <div>
+        Choose language: <span class="space lang en" tabindex="0" role="button" data-interactive>EN</span>
+                         <span class="space lang uk" tabindex="0" role="button" data-interactive>UA</span>
+                         <span class="space lang ru" tabindex="0" role="button" data-interactive>RU</span>
+        Choose theme: <span class="space theme l" tabindex="0" role="button" data-interactive>Light</span>
+                      <span class="space theme d" tabindex="0" role="button" data-interactive>Dark</span>
+      </div>
+      <div>Initially, the language and theme are selected according to your device settings</div>
+      <div>If you change it manually, site store this data on your device for next sessions</div>
+      <div>
+        Credits: icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware" target="_blank" rel="noreferrer" data-interactive>Good Ware</a>,
+        <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp" target="_blank" rel="noreferrer" data-interactive>Eucalyp</a>,
+        <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons" target="_blank" rel="noreferrer" data-interactive>Smashicons</a> and
+        <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank" rel="noreferrer" data-interactive>Freepik</a>
+        from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noreferrer" data-interactive> www.flaticon.com</a>
+      </div>
+      <div>Project created in March 2020 thanks to my physic teacher from NTU KHPI, Kharkiv, Ukraine</div>
+      <div>Source code are open and available for everyone on
+        <a href="https://github.com/lr0pb/physicGame" title="Repository with source code for this project" target="_blank" rel="noreferrer" data-interactive>GitHub.com</a>
+      </div>
     </footer>
     <div id="ghostBackground"></div>
     <div id="confettiContainer"></div>
@@ -152,12 +162,8 @@
         <div class="light"></div>
         <div class="cover"></div>
       </div>
-      <h2 data-text data-ru="Всё решено правильно!" data-uk="Все розв'язано правильно!" data-en="Everything is solved correctly!">Всё решено правильно!</h2>
-      <button class="reload" data-text data-ru="Ещё раз?" data-uk="Ще раз?" data-en="Again?">Ещё раз?</button>
-    </div>
-    <div id="updateBlock" class="popup">
-      <h2 data-text data-ru="Появилась новая версия!" data-uk="З'явилася нова версія!" data-en="We found a new version!">Появилась новая версия!</h2>
-      <button class="reload" data-text data-ru="Обновить" data-uk="Оновити" data-en="Update">Обновить</button>
+      <h2 data-text data-ru="Всё решено правильно!" data-uk="Все розв'язано правильно!" data-en="Everything has been solved correctly!">Everything has been solved correctly!</h2>
+      <button class="reload" data-text data-ru="Пройти ещё раз?" data-uk="Пройти ще раз?" data-en="Run it one more time?">Run it one more time?</button>
     </div>
   </body>
 </html>
