Add emojis in footer info, fix theme switching

--- a/index.html
+++ b/index.html
@@ -142,16 +142,16 @@
                       <span class="space theme d" tabindex="0" role="button" data-interactive>Dark</span>
       </div>
       <div>Initially, the language and theme are selected according to your device settings</div>
-      <div>If you change it manually, site store this data on your device for next sessions</div>
+      <div>🔐 If you change it manually, site store this data on your device for next sessions</div>
       <div>
-        Credits: icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware" target="_blank" rel="noreferrer" data-interactive>Good Ware</a>,
+        🙂 Credits: icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware" target="_blank" rel="noreferrer" data-interactive>Good Ware</a>,
         <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp" target="_blank" rel="noreferrer" data-interactive>Eucalyp</a>,
         <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons" target="_blank" rel="noreferrer" data-interactive>Smashicons</a> and
         <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank" rel="noreferrer" data-interactive>Freepik</a>
         from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noreferrer" data-interactive> www.flaticon.com</a>
       </div>
-      <div>Project created in March 2020 thanks to my physic teacher from NTU KHPI, Kharkiv, Ukraine</div>
-      <div>Source code are open and available for everyone on
+      <div>✨ Project created in March 2020 thanks to my physic teacher from NTU KHPI, Kharkiv, Ukraine</div>
+      <div>🔬 Source code are open and available for everyone on
         <a href="https://github.com/lr0pb/physicGame" title="Repository with source code for this project" target="_blank" rel="noreferrer" data-interactive>GitHub.com</a>
       </div>
     </footer>
